--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -35,33 +35,33 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    background: #D0C5BD;
 }
 
 .about-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background: #D0C5BD;
 }
 
 .program-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    background: #D0C5BD;
 }
 
 .sponsors-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    background: #D0C5BD;
 }
 
 .resources-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #eee;
+    background: #D0C5BD;
 }
