--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -33,7 +33,7 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    height: 100%;
+    height: auto%;
     padding-top: 10px;
     text-align: center;
     background: #D0C5BD;
