--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -66,3 +66,21 @@ of those sections to manage the look and feel of the site. */
     text-align: center;
     background: #D0C5BD;
 }
+
+.btn-outline {
+    margin-top: 15px;
+    border: solid 2px #26E2E4;
+    font-size: 20px;
+    color: #4F98C4;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+}
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active,
+.btn-outline.active {
+    border: solid 2px #26E2E4;
+    color: #4F98C4;
+    background: #fff;
+}
