--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -71,7 +71,7 @@ of those sections to manage the look and feel of the site. */
     margin-top: 15px;
     border: solid 2px #26E2E4;
     font-size: 20px;
-    color: #4F98C4;
+    color: #B3B3B3;
     background: 0 0;
     transition: all .3s ease-in-out;
 }
