--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -72,7 +72,7 @@ of those sections to manage the look and feel of the site. */
     border: solid 2px #26E2E4;
     font-size: 20px;
     color: #4F98C4;
-    background: 0 0;
+    background: gray;
     transition: all .3s ease-in-out;
 }
 
@@ -81,6 +81,6 @@ of those sections to manage the look and feel of the site. */
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #26E2E4;
-    color: #B3B3B3;
+    color: #4F98C4;
     background: #fff;
 }
