--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -69,9 +69,9 @@ of those sections to manage the look and feel of the site. */
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #26E2E4;
+    border: solid 2px black;
     font-size: 20px;
-    color: #4F98C4;
+    color: black;
     background: gray;
     transition: all .3s ease-in-out;
 }
