--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -71,7 +71,7 @@ of those sections to manage the look and feel of the site. */
     margin-top: 15px;
     border: solid 2px black;
     font-size: 20px;
-    color: black;
+    color: white;
     background: gray;
     transition: all .3s ease-in-out;
 }
@@ -80,7 +80,7 @@ of those sections to manage the look and feel of the site. */
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #26E2E4;
+    border: solid 2px black;
     color: #4F98C4;
     background: #fff;
 }
