--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -17,6 +17,8 @@ html {
 
 @media(min-width:767px) {
     .navbar {
+        background-color:#4F98C4;
+        color:black;
         padding: 20px 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
