--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -39,35 +39,35 @@ of those sections to manage the look and feel of the site. */
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D0C5BD;
+    background: #D7D7D7;
 }
 
 .about-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D0C5BD;
+    background: #D7D7D7;
 }
 
 .programs-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D0C5BD;
+    background: #D7D7D7;
 }
 
 .sponsors-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D0C5BD;
+    background: #D7D7D7;
 }
 
 .resources-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D0C5BD;
+    background: #D7D7D7;
 }
 
 .btn-outline {
