--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -7,7 +7,7 @@
 body {
     width: 100%;
     height: 100%;
-    background-color:#D7D7D7;
+    background-color:#dcdbdd;
     color: black;
 }
 
@@ -39,35 +39,35 @@ of those sections to manage the look and feel of the site. */
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D7D7D7;
+    background: #dcdbdd;
 }
 
 .about-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D7D7D7;
+    background: #dcdbdd;
 }
 
 .programs-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D7D7D7;
+    background: #dcdbdd;
 }
 
 .sponsors-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D7D7D7;
+    background: #dcdbdd;
 }
 
 .resources-section {
     height: auto;
     padding-top: 10px;
     text-align: center;
-    background: #D7D7D7;
+    background: #dcdbdd;
 }
 
 .btn-outline {
