--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -91,7 +91,7 @@ of those sections to manage the look and feel of the site. */
 
 
 .tbox {position:absolute; display:none; padding:14px 17px; z-index:900; color: #000}
-.tinner {padding:15px; -moz-border-radius:5px; border-radius:5px; background:#fff url(../img/preload.gif) no-repeat 50% 50%; border-right:1px solid #333; border-bottom:1px solid #333; color: #000}
+.tinner {padding:15px; -moz-border-radius:5px; border-radius:5px; background:#fff url(../assets/img/preload.gif) no-repeat 50% 50%; border-right:1px solid #333; border-bottom:1px solid #333; color: #000}
 .tmask {position:absolute; display:none; top:0px; left:0px; height:100%; width:100%; background:#000; color:#000; z-index:800}
-.tclose {position:absolute; top:0px; right:0px; width:30px; height:30px; cursor:pointer; background:url(../img/close.png) no-repeat}
+.tclose {position:absolute; top:0px; right:0px; width:30px; height:30px; cursor:pointer; background:url(../assets/img/close.png) no-repeat}
 .tclose:hover {background-position:0 -30px}
